--- a/statsPreview.css
+++ b/statsPreview.css
@@ -25,7 +25,7 @@ h2#head {
 	width: 220px;
 	text-align: center;
 }
-em#headColor {
+strong#headColor {
 	color: hsl(277, 64%, 61%);
 }
 p#textBody {
